--- a/app/views/xpert_results/new.haml
+++ b/app/views/xpert_results/new.haml
@@ -1,9 +1,9 @@
-.testflow
+#new-xpert-results.testflow
   .container
     .row.labelHeader
       .col-6
         %h3
-          = I18n.t('culture_results.new.header')
+          = I18n.t('xpert_results.new.header')
       .col-6
         %ul
           %li
