Add edit/update patient results.

--- a/app/views/culture_results/edit.haml
+++ b/app/views/culture_results/edit.haml
@@ -1,9 +1,9 @@
-#new-xpert-results.testflow
+#edit-culture-result.testflow
   .container
     .row.labelHeader
       .col-6
         %h3
-          = I18n.t('xpert_results.new.header', patient_name: patient_display_name(@xpert_result.patient.name))
+          = I18n.t('culture_results.edit.header', patient_name: patient_display_name(@culture_result.patient.name))
       .col-6
         %ul
           %li
