--- a/app/views/culture_results/new.haml
+++ b/app/views/culture_results/new.haml
@@ -3,7 +3,7 @@
     .row.labelHeader
       .col-6
         %h3
-          = I18n.t('culture_results.new.header')
+          = I18n.t('culture_results.new.header', patient_name: patient_display_name(@culture_result.patient.name))
       .col-6
         %ul
           %li
