--- a/app/views/culture_results/show.haml
+++ b/app/views/culture_results/show.haml
@@ -3,7 +3,7 @@
     .row.labelHeader
       .col-6
         %h3
-          = I18n.t('culture_results.show.header', patient_name: patient_display_name(@requested_test.encounter.patient.name))
+          = I18n.t('culture_results.show.header', patient_name: patient_display_name(@culture_result.patient.name))
       .col-6
         %ul
           %li
