--- a/app/views/microscopy_results/edit.haml
+++ b/app/views/microscopy_results/edit.haml
@@ -1,9 +1,9 @@
-#new-xpert-results.testflow
+#microscopy-results.testflow
   .container
     .row.labelHeader
       .col-6
         %h3
-          = I18n.t('xpert_results.new.header', patient_name: patient_display_name(@xpert_result.patient.name))
+          = I18n.t('microscopy_results.edit.header', patient_name: patient_display_name(@microscopy_result.patient.name))
       .col-6
         %ul
           %li
