--- a/app/views/microscopy_results/new.haml
+++ b/app/views/microscopy_results/new.haml
@@ -3,7 +3,7 @@
     .row.labelHeader
       .col-6
         %h3
-          = I18n.t('microscopy_results.new.header')
+          = I18n.t('microscopy_results.new.header', patient_name: patient_display_name(@microscopy_result.patient.name))
       .col-6
         %ul
           %li
