Use localisation for Save, Cancel and Back.

--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -57,4 +57,4 @@
 
   .row.button-actions
     .col
-      = f.submit 'Save', class: 'btn-primary'
+      = f.submit I18n.t('views.save'), class: 'btn-primary'
