--- a/app/views/filters/new.haml
+++ b/app/views/filters/new.haml
@@ -4,7 +4,7 @@
       .row
         .col
           %h2
-            = link_to filters_path, class: 'side-link', title: 'Back' do
+            = link_to filters_path, class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left-white.png"
             New Filter
 
