--- a/app/views/institutions/new.haml
+++ b/app/views/institutions/new.haml
@@ -5,7 +5,7 @@
         .col
           %h2
             - unless @institutions.size == 0
-              = link_to institutions_path, class: 'side-link', title: 'Back' do
+              = link_to institutions_path, class: 'side-link', title: I18n.t('views.back') do
                 = image_tag "arrow-left-white.png"
             New Institution
 
