--- a/app/views/patients/new.html.haml
+++ b/app/views/patients/new.html.haml
@@ -4,9 +4,9 @@
       .row
         .col
           %h2
-            = link_to patients_path, class: 'side-link', title: 'Back' do
+            = link_to patients_path, class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left-white.png"
-            New Patient
+            = I18n.t('patients.new.new_patient')
 
 .row
   .col.pe-6
