--- a/app/views/roles/_form.html.haml
+++ b/app/views/roles/_form.html.haml
@@ -57,8 +57,8 @@
   = react_component 'PolicyDefinition', definition: @role.definition, actions: actions_per_resource_type, context: params['context'], resources: @policy_definition_resources, resourceTypes: resource_types
   .row.button-actions
     .col
-      = f.submit 'Save', :class => 'btn-primary'
-      = link_to 'Cancel', roles_path, class: 'btn-link'
+      = f.submit I18n.t('views.save'), :class => 'btn-primary'
+      = link_to I18n.t('views.cancel'), roles_path, class: 'btn-link'
       - if @can_delete
         - unless @role.new_record?
           = confirm_deletion_button @role, 'role'
