--- a/app/views/sites/edit.html.haml
+++ b/app/views/sites/edit.html.haml
@@ -4,7 +4,7 @@
       .row
         .col
           %h2{entity_html_options(@site)}
-            = link_to sites_path, class: 'side-link', title: 'Back' do
+            = link_to sites_path, class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left.png"
             = @site.name
 
