--- a/app/views/alert_groups/new.html.haml
+++ b/app/views/alert_groups/new.html.haml
@@ -4,7 +4,7 @@
       .row
         .col
           %h2
-            = link_to alert_groups_path, class: 'side-link', title: 'Back' do
+            = link_to alert_groups_path, class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left-white.png"
             New Alert
 
