--- a/app/views/comments/_form.haml
+++ b/app/views/comments/_form.haml
@@ -20,5 +20,5 @@
 
   .row.button-actions
     .col
-      = f.submit 'Save', class: 'btn-primary'
-      = link_to 'Cancel', patient_path(@patient), class: 'btn-link'
+      = f.submit I18n.t('views.save'), class: 'btn-primary'
+      = link_to I18n.t('views.cancel'), patient_path(@patient), class: 'btn-link'
