--- a/app/views/device_models/_form.haml
+++ b/app/views/device_models/_form.haml
@@ -108,7 +108,7 @@
     .col
       %hr
       = f.submit class: 'btn-primary', value: "Save"
-      = link_to 'Cancel', device_models_path, class: 'btn-link'
+      = link_to I18n.t('views.cancel'), device_models_path, class: 'btn-link'
       - if can_delete_device_model?(@device_model)
         = link_to "Delete", @device_model, method: :delete, data: { confirm: 'Are you sure you want to delete this device model? All devices using this device model will be deleted as well, along with any tests they may have uploaded.' }, class: 'btn-danger pull-right'
   %br
