--- a/app/views/device_models/show.haml
+++ b/app/views/device_models/show.haml
@@ -4,7 +4,7 @@
       .row
         .col
           %h2
-            = link_to device_models_path, class: 'side-link', title: 'Back' do
+            = link_to device_models_path, class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left.png"
             = @device_model.name
 .row
@@ -27,4 +27,4 @@
 
 .row
   .col
-    = link_to 'Back', device_models_path, :class => 'btn-primary'
+    = link_to I18n.t('views.back'), device_models_path, :class => 'btn-primary'
