--- a/app/views/devices/_device_card.haml
+++ b/app/views/devices/_device_card.haml
@@ -4,7 +4,7 @@
       .row
         .col
           %h2{entity_html_options(@device)}
-            = link_to devices_path, class: 'side-link', title: 'Back' do
+            = link_to devices_path, class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left.png"
             = @device.name
 
