--- a/app/views/devices/edit.haml
+++ b/app/views/devices/edit.haml
@@ -4,7 +4,7 @@
       .row
         .col
           %h2
-            = link_to device_path(@device), class: 'side-link', title: 'Back' do
+            = link_to device_path(@device), class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left.png"
             = @device.name
 
