--- a/app/views/devices/new.haml
+++ b/app/views/devices/new.haml
@@ -5,7 +5,7 @@
         .row
           .col
             %h2
-              = link_to devices_path, class: 'side-link', title: 'Back' do
+              = link_to devices_path, class: 'side-link', title: I18n.t('views.back') do
                 = image_tag "arrow-left-white.png"
               = I18n.t('devices.new.new_device')
 
