--- a/app/views/dst_lpa_results/edit.haml
+++ b/app/views/dst_lpa_results/edit.haml
@@ -3,7 +3,7 @@
     .row.labelHeader
       .col-6
         %h3
-          = I18n.t('dst_lpa_results.new.header', patient_name: patient_display_name(@dst_lpa_result.patient.name))
+          = I18n.t('dst_lpa_results.edit.header', patient_name: patient_display_name(@dst_lpa_result.patient.name))
       .col-6
         %ul
           %li
