--- a/app/views/patients/_filters.haml
+++ b/app/views/patients/_filters.haml
@@ -5,19 +5,22 @@
         .col
           %h1
             - if @can_create
-              = link_to "+", new_patient_path, class: 'btn-add side-link fix', title: 'Add Patient'
-            Patients
+              = link_to "+", new_patient_path, class: 'btn-add side-link fix', title: I18n.t('patients.filters.add_patient')
+            = I18n.t('patients.filters.patients')
       %form#filters-form{action: patients_path, "data-auto-submit" => true}
         %input{type: "hidden", name: "page_size", value: @page_size}
         .row
           .filter
-            %label.block Name
+            %label.block
+              = I18n.t('patients.filters.name')
             %input.input-block{type: "text", name: "name", value: params["name"]}
           .filter
-            %label.block Patient Id
+            %label.block
+              = I18n.t('patients.filters.patient_id')
             %input.input-block{type: "text", name: "entity_id", value: params["entity_id"]}
           .filter
-            %label.block Last test order
+            %label.block
+              = I18n.t('patients.filters.last_test_order')
             = cdx_select name: "last_encounter", value: params["last_encounter"] do |select|
-              - select.item "", "Show all"
+              - select.item "", I18n.t('patients.filters.show_all')
               - select.items @date_options, :value, :label
