--- a/app/views/patients/_form.html.haml
+++ b/app/views/patients/_form.html.haml
@@ -47,8 +47,8 @@
 
   .row.button-actions
     .col
-      = f.submit 'Save', class: 'btn-primary'
-      = link_to 'Cancel', patients_path, class: 'btn-link'
+      = f.submit I18n.t('views.save'), class: 'btn-primary'
+      = link_to I18n.t('views.cancel'), patients_path, class: 'btn-link'
 
       - if @can_delete
         = confirm_deletion_button @patient, 'patient'
