--- a/app/views/roles/edit.haml
+++ b/app/views/roles/edit.haml
@@ -4,7 +4,7 @@
       .row
         .col
           %h2
-            = link_to roles_path, class: 'side-link', title: 'Back' do
+            = link_to roles_path, class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left-white.png"
             = @role.name
 
