--- a/app/views/sites/_form.html.haml
+++ b/app/views/sites/_form.html.haml
@@ -95,8 +95,8 @@
 
   .row.button-actions
     .col
-      = f.submit 'Save', class: 'btn-primary'
-      = link_to 'Cancel', sites_path, class: 'btn-link'
+      = f.submit I18n.t('views.save'), class: 'btn-primary'
+      = link_to I18n.t('views.cancel'), sites_path, class: 'btn-link'
       - if @can_delete
         - if @can_be_deleted
           = confirm_deletion_button @site, 'site'
