--- a/app/views/subscribers/edit.html.haml
+++ b/app/views/subscribers/edit.html.haml
@@ -4,7 +4,7 @@
       .row
         .col
           %h2
-            = link_to subscribers_path, class: 'side-link', title: 'Back' do
+            = link_to subscribers_path, class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left.png"
             #{subscriber.name}
 
