Patient card tables updated with all headers sortable.

--- a/app/views/patients/_patient_episode_summary.haml
+++ b/app/views/patients/_patient_episode_summary.haml
@@ -37,7 +37,7 @@
             %li
               %label
                 = Episode.human_attribute_name(:hiv_status)
-              = hiv_status_name(episode.hiv_status)
+              = episode.hiv_status
             %li
               %label
                 = Episode.human_attribute_name(:initial_history)
