Latest style changes for listing pages

--- a/app/views/patients/edit.html.haml
+++ b/app/views/patients/edit.html.haml
@@ -1,5 +1,5 @@
 - content_for(:subheader) do
-  .row.center.edit
+  .row.center.collapse.edit
     .col.pe-10
       .row
         .col
@@ -7,5 +7,4 @@
             = link_to patient_path(@patient), class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left.png"
             = @patient.name
-
 = render 'form'
