--- a/app/views/patients/edit.html.haml
+++ b/app/views/patients/edit.html.haml
@@ -4,7 +4,7 @@
       .row
         .col
           %h2
-            = link_to patients_path, class: 'side-link', title: I18n.t('views.back') do
+            = link_to patient_path(@patient), class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left.png"
             = @patient.name
 
