--- a/app/views/culture_results/new.haml
+++ b/app/views/culture_results/new.haml
@@ -7,5 +7,5 @@
       .col-6
         %ul
           %li
-            = link_to I18n.t('views.back'), encounter_path(@requested_test.encounter), class: 'button new'
+            = link_to I18n.t('views.back'), encounter_path(@requested_test.encounter), :test_order_page_mode => @return_page_mode, class: 'button new'
     = render 'form'
