--- a/app/views/dashboards/_date_filter.haml
+++ b/app/views/dashboards/_date_filter.haml
@@ -20,14 +20,42 @@
               - select.items Extras::Dates::Filters.date_options_for_filter, :value, :label
 
           .topbutton
-            %input#query_button.btn-primary(type='submit' value="#{I18n.t('dashboard.index.filter_button')}")
+            %input#clear_button.btn-primary(type='clear' value="#{I18n.t('dashboard.index.filter_button')}")
 
 :javascript
   $(document).ready( function()
   {
+    $('#clear_button').on('click', function()
+    {
+      $('input#range_start_time\\[gte\\]').val( '0000-00-00' );
+      $('input#range_start_time\\[lte\\]').val( '0000-00-00' );
+      $(this).hide();
+    });
+
+    $('input#range_start_time\\[gte\\]').on('change', function()
+    {
+      var other = $('input#range_start_time\\[lte\\]').val();
+      if(other)
+        $('#filters-form').submit();
+    });
+
+    $('input#range_start_time\\[lte\\]').on('change', function()
+    {
+      var other = $('input#range_start_time\\[gte\\]').val();
+      if(other)
+        $('#filters-form').submit();
+    });
+
     $('input[name=since]').on('change', function()
     {
       $('input#range_start_time\\[gte\\]').val( $(this).val() );
       $('input#range_start_time\\[lte\\]').val( new Date().toJSON().slice(0,10) );
+      $('#filters-form').submit();
     });
+
+    if( $('input#range_start_time\\[lte\\]').val() || $('input#range_start_time\\[gte\\]').val() )
+      $('#clear_button').show();
+    else
+      $('#clear_button').hide();
+
   })
