Fix patient list heading tag

--- a/app/views/patients/_filters.haml
+++ b/app/views/patients/_filters.haml
@@ -2,11 +2,10 @@
   %section.row.filterHeader
     .small-12.columns
       .search
-        %h1 Patients
+        %h1 I18n.t('patients.filters.patients')
         .btn.add
           - if @can_create
             = link_to "Add Patient", new_patient_path, class: 'btn-add side-link fix', title: I18n.t('patients.filters.add_patient')
-          = I18n.t('patients.filters.patients')
 
             
       %form.pageFilters#filters-form{action: patients_path, "data-auto-submit" => true}
