--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,7 @@
 !!!
 %html
   %head
+    %meta{:charset => "utf-8"}
     %title Connected Diagnostics Platform
     = Gon::Base.render_data({})
     = stylesheet_link_tag "application", :media => "all"
