--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,9 @@
 !!!
 %html
   %head
-    %title Connected Diagnostics Platform
+    %meta{:charset => "utf-8"}/
+    %title
+      = I18n.t('layout.header.meta_title')
     = Gon::Base.render_data({})
     = stylesheet_link_tag "application", :media => "all"
     = javascript_include_tag "es5-shim" if Rails.env.test?
