--- a/app/views/patients/_filters.haml
+++ b/app/views/patients/_filters.haml
@@ -6,7 +6,7 @@
           = I18n.t('patients.filters.patients')
         .btn.add
           - if @can_create
-            = link_to I18n.t('patients.filters.add_patients'), new_patient_path, class: 'btn-add side-link fix', title: I18n.t('patients.filters.add_patient')
+            = link_to I18n.t('patients.filters.add_patient'), new_patient_path, class: 'btn-add side-link fix', title: I18n.t('patients.filters.add_patient')
 
 
         %form.pageFilters#filters-form{action: patients_path, "data-auto-submit" => true}
