--- a/app/views/shared/_header_nav.haml
+++ b/app/views/shared/_header_nav.haml
@@ -12,7 +12,7 @@
       %ul
         -# ------------ HOME
         - if has_access?(TestResult, Policy::Actions::MEDICAL_DASHBOARD)
-          %li{:class => params[:controller] == "dashboards" && params[:action] == "index" && "active"}
+          %li{:class => is_menu_item_active?('dashboards', request.params) }
             = link_to "Home", dashboard_path
 
         -# ------------ REPORTS (just unindent the lines below to reactivate)
@@ -22,28 +22,28 @@
 
         -# ------------ PATIENTS
         - if has_access_to_patients_index?
-          %li{:class => params[:controller] == "patients" && "active"}
+          %li{:class => is_menu_item_active?('patients', request.params) }
             = link_to "Patients", patients_path
 
         -# ------------ TEST Orders
         - if has_access_to_test_results_index?
-          %li{:class => ["test_orders", "encounters"].include?(params[:controller]) && "active"}
+          %li{:class => is_menu_item_active?('test_orders', request.params) }
             = link_to "Test Orders", test_results_path + '&display_as=test_order'
 
         -# ------------ TEST RESULTS
         - if has_access_to_test_results_index?
-          %li{:class => ["test_results", "encounters"].include?(params[:controller]) && "active"}
+          %li{:class => is_menu_item_active?('test_results', request.params) }
             = link_to "Test Results", test_results_path
 
 
         -# ------------ DEVICES
         - if has_access_to_devices_index?
-          %li{:class => params[:controller] == "devices" && "active"}
+          %li{:class => is_menu_item_active?('devices', request.params) }
             = link_to "Devices", devices_path
 
         -# ------------ SETTINGS
         - if has_access_to_settings?
-          %li{:class => (["roles", "policies", "alerts", "incidents", "alert_messages"].include?(params[:controller]) || params[:action] == "settings") && "active"}
+          %li{:class => is_menu_item_active?('settings', request.params) }
             = link_to "Settings", settings_path
 
         -# ------------ SITES
