New filter for drtb chart results.

--- a/app/views/dashboards/index.html.haml
+++ b/app/views/dashboards/index.html.haml
@@ -20,23 +20,27 @@
         .box-content
           #chartAverageTestsSite{:style => "height: 200px; width: 100%;"}
             = react_component 'CanvasJsChart', chartDiv: 'chartAverageTestsSite', chartData: Extras::Charts::VerticalColumns.new(@dashboard_report.average_test_per_site).render
-    %section.row
-      .small-6.columns.box
-        %header
-          = image_tag('img/test-tube.png')
-          %h3
-            = I18n.t('dashboard.index.drtb_percentage')
-        .box-content
-          #chartDrtbPercentage{:style => "height: 200px; width: 100%;"}
-            = react_component 'CanvasJsChart', chartDiv: 'chartDrtbPercentage', chartData: Extras::Charts::Pie.new(@dashboard_report.drtb_percentage).render
-      .small-6.columns.box
-        %header
-          = image_tag('img/test-tube.png')
-          %h3
-            = I18n.t('dashboard.index.drug_resistance')
-        .box-content
-          #chartDrugResistancePercentage{:style => "height: 200px; width: 100%;"}
-            = react_component 'CanvasJsChart', chartDiv: 'chartDrugResistancePercentage', chartData: Extras::Charts::Pie.new(@dashboard_report.drug_resistance).render
+    %section
+      .row
+        .small-6.columns.box
+          %header
+            = image_tag('img/test-tube.png')
+            %h3
+              = I18n.t('dashboard.index.drtb_percentage')
+          .box-content
+            #chartDrtbPercentage{:style => "height: 200px; width: 100%;"}
+              = react_component 'CanvasJsChart', chartDiv: 'chartDrtbPercentage', chartData: Extras::Charts::Pie.new(@dashboard_report.drtb_percentage).render
+        .small-6.columns.box
+          %header
+            = image_tag('img/test-tube.png')
+            %h3
+              = I18n.t('dashboard.index.drug_resistance')
+          .box-content
+            #chartDrugResistancePercentage{:style => "height: 200px; width: 100%;"}
+              = react_component 'CanvasJsChart', chartDiv: 'chartDrugResistancePercentage', chartData: Extras::Charts::Pie.new(@dashboard_report.drug_resistance).render
+      .row
+        %p.note
+          = I18n.t('dashboard.index.chart_note')
     %section.row
       .small-4.columns.box
         %header
