--- a/app/views/incidents/_filters.html.haml
+++ b/app/views/incidents/_filters.html.haml
@@ -1,30 +1,33 @@
 - content_for(:subheader) do
-  %form#filters-form{action: incidents_path, "data-auto-submit" => true}
+  .filterbar.filterbartest
+    .heading
+      .title
+        =I18n.t('settings.alerts.incidents.incidents')
+  
+    .topfilteropt
+      %input#query_button.btn-primary.filtershow(type='button' value='Show Filters')
+  
+  %form.filteroptions#filters-form{action: incidents_path, "data-auto-submit" => true}
     %input{type: "hidden", name: "page_size", value: @page_size}
-    .row.center.filters
+    .row.center.custom_filters
       .col.pe-10
-        .row
-          .col
-            %h1
-              Incidents
+      .advanced
         .row
           .filter
-            %label.block Alert Group
+            %label.block 
+              =I18n.t('settings.alerts.incidents.alert_group')
             = cdx_select name: "alert.id", value: params["alert.id"] do |select|
               - select.item "", "Show all"
               - select.items @alerts, :id, :name
           .filter
-            %label.block Date
+            %label.block 
+              =I18n.t('settings.alerts.incidents.date')
             = cdx_select name: "since", value: params["since"] do |select|
               - select.item "", "Show all"
               - select.items @date_options, :value, :label
-          .col
-            %a.btn-toggle.pull-right{:title => "Toggle advanced filters"}
-
-        .advanced
-          .row
-            .filter
-              %label.block Sample Id
-              %input{type: "text", name: "sample.id", value: params["sample.id"]}
+          .filter
+            %label.block 
+              =I18n.t('settings.alerts.incidents.sample_id')
+            %input{type: "text", name: "sample.id", value: params["sample.id"]}
 
 
