Add test order controller and localise it.

--- a/app/views/encounters/edit.html.haml
+++ b/app/views/encounters/edit.html.haml
@@ -4,7 +4,7 @@
       .row
         .col
           %h2
-            = link_to test_results_path(display_as: "test_order"), class: 'side-link', title: I18n.t('views.back') do
+            = link_to test_orders_path, class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left.png"
             Test Order
 
