--- a/app/views/shared/_header_nav.haml
+++ b/app/views/shared/_header_nav.haml
@@ -28,7 +28,7 @@
         -# ------------ TEST Orders
         - if has_access_to_test_results_index?
           %li{:class => is_menu_item_active?('test_orders', request.params) }
-            = link_to I18n.t('layout.header_nav.test_orders'), test_results_path + '&display_as=test_order'
+            = link_to I18n.t('layout.header_nav.test_orders'), test_orders_path
 
         -# ------------ TEST RESULTS
         - if has_access_to_test_results_index?
