--- a/app/views/patients/_patient_history.haml
+++ b/app/views/patients/_patient_history.haml
@@ -10,4 +10,4 @@
       %li
         = link_to I18n.t('patients.show.add_comment'), new_patient_comment_path(patient), class: 'button add', title: I18n.t('patients.show.add_comment')
 .panel.patient-details
-  = react_component 'PatientHistory', commentsUrl: patient_comments_path(patient), patientLogsUrl: patient_patient_logs_path(patient), testOrdersUrl: patient_patient_test_orders_path(patient), testResultsUrl: patient_patient_test_results_path(patient)
+  = react_component 'PatientHistory', defaultTab: set_default_tab, commentsUrl: patient_comments_path(patient), patientLogsUrl: patient_patient_logs_path(patient), testOrdersUrl: patient_patient_test_orders_path(patient), testResultsUrl: patient_patient_test_results_path(patient)
