Resize columns plugin.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,3 +41,4 @@
 @import "jquery-ui.theme.min";
 @import "jquery-ui.structure.min";
 @import "jquery-ui.min";
+@import "jquery-resizable-table-columns";
