Sortable headers on devices table.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,3 +30,9 @@
 
       %footer
         = render "shared/footer"
+        :javascript
+          $(function(){
+            $("table").resizableColumns({
+              store: window.store
+            });
+          });
