--- a/app/views/devices/index.haml
+++ b/app/views/devices/index.haml
@@ -10,8 +10,17 @@
           %p
             = I18n.t('devices.index.configuration_steps')
     - else
-      = react_component "DevicesIndexTable", devices: Presenters::Devices.index_table(@devices), title: I18n.t('devices.index.device', count: @total),
-          orderBy: params["order_by"] || "devices.name",
-          downloadCsvPath: devices_path(filters_params.merge(format: :csv).merge(display_as: I18n.t('devices.index.download_csv')))
-      .pagination
-        = render 'shared/pagination'
+      %section.row
+        .small-12.columns.box
+          %header
+            = image_tag('img/device.png')
+            %h3
+              = I18n.t('devices.index.devices')
+            %span.table-actions
+              = link_to devices_path(filters_params.merge(format: :csv)), title: I18n.t('devices.index.download_csv') do
+                %span.icon-download.icon-gray
+          .box-content
+            = react_component "DevicesIndexTable", devices: Presenters::Devices.index_table(@devices), title: I18n.t('devices.index.device', count: @total),
+                orderBy: params["order_by"] || "devices.name"
+            .pagination
+              = render 'shared/pagination'
