Resize columns of device messages table.

--- a/app/views/device_messages/index.haml
+++ b/app/views/device_messages/index.haml
@@ -10,8 +10,13 @@
           %p
             = I18n.t('device_messages.index.connect_device')
     - else
-      .row.paginationHeader
-        .col
-          = react_component "DeviceMessagesList", deviceMessages: @device_messages, title: I18n.t('test_orders.index.test_order', count: @total), orderBy: @order_by
-          .pagination
-            = render 'shared/pagination'
+      %section.row
+        .small-12.columns.box
+          %header
+            = image_tag('img/device.png')
+            %h3
+              = I18n.t('test_orders.index.test_order', count: @total)
+          .box-content
+            = react_component "DeviceMessagesList", deviceMessages: @device_messages, orderBy: @order_by
+            .pagination
+              = render 'shared/pagination'
