--- a/app/assets/stylesheets/_testflow.scss
+++ b/app/assets/stylesheets/_testflow.scss
@@ -309,7 +309,7 @@ body {
       background: #2196f3;
     }
     &.cancel, &.edit {
-      background: #555;
+      background: #e06023
     }
   }
   .patient {
