--- a/app/views/patients/_patient_history.haml
+++ b/app/views/patients/_patient_history.haml
@@ -9,5 +9,5 @@
           = link_to I18n.t('patients.show.add_test_order'), new_encounter_path(mode: 'fresh_tests', patient_id: patient.id), class: 'button add'
       %li
         = link_to I18n.t('patients.show.add_comment'), new_patient_comment_path(patient), class: 'button add', title: I18n.t('patients.show.add_comment')
-.panel.patient-details
+.panel.patient-details.patientHistory
   = react_component 'PatientHistory', defaultTab: set_default_tab, commentsUrl: patient_comments_path(patient), patientLogsUrl: patient_patient_logs_path(patient), testOrdersUrl: patient_patient_test_orders_path(patient), testResultsUrl: patient_patient_test_results_path(patient)
