--- a/app/views/test_results/_filters.haml
+++ b/app/views/test_results/_filters.haml
@@ -3,7 +3,8 @@
   .filterbar.filterbartest
     .heading
       .title
-        Tests
+        =I18n.t('test_results.filters.title')
+  
     .topfilteropt
       %input#query_button.btn-primary.filtershow(type='button' value='Show Filters')
 
@@ -16,37 +17,58 @@
 
         .row
           .filter
-            %label.block Condition
+            %label.block
+              =I18n.t('condition')
             = cdx_select name: "test.assays.condition", value: params["test.assays.condition"] do |select|
-              - select.item "", "Show all"
+              - select.item "", I18n.t('test_results.filters.show_all')
               - select.items(@conditions.map { |name| [name.upcase, name] })
+
           .filter
-            %label.block Result
+            %label.block
+              =I18n.t('result')
             = cdx_select name: "test.assays.result", value: params["test.assays.result"] do |select|
-              - select.item "", "Show all"
+              - select.item "", I18n.t('test_results.filters.show_all')
               - select.items @results, :value, :label
+
           .filter
-            %label.block Date
+            %label.block
+              =I18n.t('date')
             = cdx_select name: "since", value: params["since"] do |select|
-              - select.item "", "Show all"
+              - select.item "", I18n.t('test_results.filters.show_all')
               - select.items @date_options, :value, :label
 
           .filter
-            %label.block Type
+            %label.block
+              =I18n.t('test_results.filters.date_from')
+            %input#from_date{type: "date", name: "from_date", value: params["from_date"]}
+
+          .filter
+            %label.block
+              =I18n.t('test_results.filters.date_to')
+            %input#to_date{type: "date", name: "to_date", value: params["to_date"]}
+          
+          .filter
+            %label.block
+              =I18n.t('test_results.filters.type')
             = cdx_select name: "test.type", value: params["test.type"] do |select|
-              - select.item "", "Show all"
+              - select.item "", I18n.t('show_all')
               - select.items @test_types
+
           .filter
-            %label.block Status
+            %label.block
+              =I18n.t('status')
             = cdx_select name: "test.status", value: params["test.status"] do |select|
-              - select.item "", "Show all"
+              - select.item "", I18n.t('show_all')
               - select.items @test_statuses
+
           .filter
-            %label.block Sample Id
+            %label.block
+              =I18n.t('test_results.filters.sample_id')
             %input{type: "text", name: "sample.id", value: params["sample.id"]}
-          - if (@devices.size > 1) || params['device.uuid']
-            .filter
-              %label.block Device
-              = cdx_select name: "device.uuid", value: params["device.uuid"] do |select|
-                - select.item "", "Show all"
-                - select.items @devices, :uuid, :name
+
+          .filter
+            %label.block
+              =I18n.t('test_results.filters.device')
+            = cdx_select name: "device.uuid", value: params["device.uuid"] do |select|
+              - select.item "", I18n.t('test_results.filters.show_all')
+              - select.items @devices, :uuid, :name
