--- a/app/views/test_results/_filters.haml
+++ b/app/views/test_results/_filters.haml
@@ -18,21 +18,21 @@
         .row
           .filter
             %label.block
-              =I18n.t('condition')
+              =I18n.t('test_results.filters.condition')
             = cdx_select name: "test.assays.condition", value: params["test.assays.condition"] do |select|
               - select.item "", I18n.t('test_results.filters.show_all')
               - select.items(@conditions.map { |name| [name.upcase, name] })
 
           .filter
             %label.block
-              =I18n.t('result')
+              =I18n.t('test_results.filters.result')
             = cdx_select name: "test.assays.result", value: params["test.assays.result"] do |select|
               - select.item "", I18n.t('test_results.filters.show_all')
               - select.items @results, :value, :label
 
           .filter
             %label.block
-              =I18n.t('date')
+              =I18n.t('test_results.filters.date')
             = cdx_select name: "since", value: params["since"] do |select|
               - select.item "", I18n.t('test_results.filters.show_all')
               - select.items @date_options, :value, :label
@@ -51,14 +51,14 @@
             %label.block
               =I18n.t('test_results.filters.type')
             = cdx_select name: "test.type", value: params["test.type"] do |select|
-              - select.item "", I18n.t('show_all')
+              - select.item "", I18n.t('test_results.filters.show_all')
               - select.items @test_types
 
           .filter
             %label.block
-              =I18n.t('status')
+              =I18n.t('test_results.filters.status')
             = cdx_select name: "test.status", value: params["test.status"] do |select|
-              - select.item "", I18n.t('show_all')
+              - select.item "", I18n.t('test_results.filters.show_all')
               - select.items @test_statuses
 
           .filter
