Add missing param to check_box_tag.

--- a/app/views/shared/_display_boolean_value.haml
+++ b/app/views/shared/_display_boolean_value.haml
@@ -1,5 +1,5 @@
 %label.checkbox
   = label_name
 .show-checkbox
-  = check_box_tag field_name, field_value, { disbled: true }
+  = check_box_tag field_name, field_value, field_value, { disbled: true }
   %label{for: 'microscopy_result_results_negative'} &nbsp;
