--- a/app/assets/javascripts/components/patient_card.js.jsx.erb
+++ b/app/assets/javascripts/components/patient_card.js.jsx.erb
@@ -9,24 +9,6 @@ var PatientCard = React.createClass({
   render: function () {
     var patient = this.props.patient;
 
-    function patientInfo(patient) {
-      var string = "";
-      if (patient.gender) {
-        string += patient.gender;
-        if (patient.dob) {
-          string += " - "
-        }
-      }
-      if (patient.dob) {
-        string += patient.dob
-        if( patient.age > 0)
-          string += " (" + patient.age + " y/o)";
-        else // months only
-          string += " (" + patient.age_months + " m/o)";
-      }
-      return string;
-    }
-
     if (patient == null) {
       return (
         <%= to_jsx(card(image: asset_url('card-unkown.png')) do |c|
@@ -35,50 +17,64 @@ var PatientCard = React.createClass({
           end
         end) %>
       );
-    } else {
+    } 
+    else 
+    {
       return (
-        <%= to_jsx(card(image: asset_url('card-unkown.png')) do |c|
-          c.top do
-            raw <<-JSX
-              {patient.name || "(Unknown name)"}
-              <br/>
-              {patientInfo(patient)}
-            JSX
-          end
+      <ul>
+        <li>
+          <label>{Patient.human_attribute_name(:name)}</label>
+          {patient_display_name(patient.name)}
+        </li>
+        <li>
+          <label>{Patient.human_attribute_name(:gender)}</label>
+          {patient.gender}
+        </li>
+        <li>
+          <label>{Patient.human_attribute_name(:dob)}</label>
+          {patient_birth_date(patient.dob)}
+        </li>
+        <li>
+          <label>{Patient.human_attribute_name(:phone)}</label>
+          {patient.phone}
+        </li>
+        <li>
+          <label>{Patient.human_attribute_name(:email)}</label>
+          {patient.email}
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <label>{Patient.human_attribute_name(:entity_id)}</label>
+          {patient.entity_id}
+        </li>
+        <li>
+          <label>{ Patient.human_attribute_name(:address)}</label>
+          {patient.address}
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <label>{Patient.human_attribute_name(:created_at)}</label>
+          {I18n.l(patient.created_at, format: :long)}
+        </li>
+      </ul>
 
-          c.bottom do
-            raw <<-JSX
-              {patient.address}<br/>
-              {patient.phone}<br/>
-              {(function(){
-                if (patient.email) {
-                  return <a href={"mailto:" + patient.email}>{patient.email}</a>;
-                }
-              }.bind(this))()}
-            JSX
-          end
-
-          c.actions do
-            raw <<-JSX
-            {(function(){
-              if (!this.props.canEdit) return;
-
-              return (
-                <a href={"/patients/" + patient.id + "/edit"} title="Edit">
-                  <img src="#{asset_url("ic-pencil.png")}"/>
-                </a>);
-            }.bind(this))()}
-            {(function(){
-              if (!this.props.canAddTest) return;
-              if (this.props.showTestLink != true) return;
-              return (
-                <a href={"/encounters/new?mode=fresh_tests&patient_id=" + patient.id } title="Create Test Order" className="label">
-                  Create Test Order
-                </a>);
-            }.bind(this))()}
-            JSX
-          end
-        end) %>
+      {(function(){
+        if (!this.props.canEdit) return;
+        return (
+          <a href={"/patients/" + patient.id + "/edit"} title="Edit">
+            <img src="#{asset_url("ic-pencil.png")}"/>
+          </a>);
+      }.bind(this))()}
+      {(function(){
+        if (!this.props.canAddTest) return;
+        if (this.props.showTestLink != true) return;
+        return (
+          <a href={"/encounters/new?mode=fresh_tests&patient_id=" + patient.id } title="Create Test Order" className="label">
+            Create Test Order
+          </a>);
+      }.bind(this))()}
       );
     }
   }
